<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ProfileFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Profile"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/profilePic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <Button
            android:id="@+id/editProfilePic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="edit"
            />

            <Button
                android:id="@+id/deleteProfilePic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#FA0000"
                android:text="delete" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginVertical="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/profileName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Name: "
                android:layout_weight="1"
                android:textSize="12sp"
                android:textStyle="bold"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/profileContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Name: "
                android:layout_weight="1"
                android:textSize="12sp"
                android:textStyle="bold"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/profileHomepage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Homepage: "
                android:layout_weight="1"
                android:textSize="12sp"
                android:textStyle="bold"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/profileLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Location "
                android:layout_weight="1"
                android:textSize="12sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ON"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:id="@+id/editProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="edit details"
                />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Track my geolocation for event verification"
            android:layout_weight="1"
            android:textStyle="bold"
            />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_locationtracking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="Latitude:"
            />

        <TextView
            android:id="@+id/textview_lat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Not currently tracking" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="Longitude:"
            />

        <TextView
            android:id="@+id/textview_long"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Not currently tracking" />


    </LinearLayout>

</LinearLayout>