<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:background="#587AF3"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="20dp"
        android:text="Edit "
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:padding="5dp"
        android:textSize="20sp"
        android:hint="name"
        android:layout_marginVertical="10dp"/>
    <EditText
        android:id="@+id/editContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:padding="5dp"
        android:textSize="20sp"
        android:hint="contact"
        android:layout_marginVertical="10dp"/>
    <EditText
        android:id="@+id/editHomepage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:padding="5dp"
        android:textSize="20sp"
        android:hint="Homepage"
        android:layout_marginVertical="10dp"/>

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="#A3FF92"
        android:text="Save"
        android:layout_marginVertical="20dp"/>



</LinearLayout>