...
            android:id="@+id/signupBtn"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Announcements:"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
